updated team headings on scoreboard

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="score-board">
-            <h3 id="guest">AWAY</h3>
+            <h3 id="guest">GUEST</h3>
             <div class="points-on-board">
                 <p id="guest-points-parag">0</p>
             </div>
